--- a/block-BNaaep/stylesheets/style.css
+++ b/block-BNaaep/stylesheets/style.css
@@ -52,3 +52,26 @@ body{
     background-color:green;
     width: 100%;
 }
+
+.container{
+    margin: 0 auto;
+    max-width: 50%;
+}
+form input{
+   padding: 2px;
+   margin: 1rem;
+   flex-wrap: wrap;
+   width: 40%;
+   height: 2rem;
+}
+
+form{
+    background-color: #ffff;
+    padding: 2rem;
+}
+
+form h1{
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 700;
+}
